# FFMpeg4

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/huzhengbiao/ffmpeg4/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-ffmpeg.cpp  native-ffmpeg.h  native-lib.cpp
app/src/main/java/com/example/huzhengbiao/ffmpeg4/: MainActivity.java  PlayerNative.java  VideoView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/huzhengbiao/ffmpeg4/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
